package com.DeliveryInventoryService.DeliveryInventoryService.Model;

import java.time.LocalDateTime;
import java.time.ZoneId;
import java.time.ZonedDateTime;
import java.util.UUID;

import org.hibernate.annotations.CreationTimestamp;
import org.hibernate.annotations.UpdateTimestamp;

import com.fasterxml.jackson.annotation.JsonBackReference;
import com.fasterxml.jackson.annotation.JsonIgnore;

import jakarta.persistence.*;
import lombok.Data;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.Setter;
import lombok.ToString;

@Entity
@Table(name = "route_points")
@Getter
@Setter
@EqualsAndHashCode(onlyExplicitlyIncluded = true)
@ToString(onlyExplicitlyIncluded = true)
public class RoutePoint {

    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    @EqualsAndHashCode.Include // <--- ADD THIS
    private UUID id;

    @ManyToOne
    @JoinColumn(name = "route_id", nullable = false)
    @JsonBackReference
    private Route route;

    @Column(nullable = false)
    private Integer sequence; // order of stop in the route

    @Column(nullable = false)
    private String locationName;

    @Column(nullable = false)
    private Double latitude;

    @Column(nullable = false)
    private Double longitude;

    private String City;

    @Enumerated(EnumType.STRING)
    @Column(name = "point_type")
    private PointType pointType;

    @Column(nullable = false)
    private LocalDateTime startTime;

    @Column(nullable = false)
    private LocalDateTime endTime;

    // ── Real-time tracking fields ─────────────────────────────────────────────

    /** Last known latitude of the vehicle while on this leg. */
    @Column(name = "current_lat")
    private Double currentLat;

    /** Last known longitude of the vehicle while on this leg. */
    @Column(name = "current_lon")
    private Double currentLon;

    /**
     * Dynamically updated expected departure time from this stop, accounting for
     * accumulated delay. Null until the first location ping arrives.
     */
    @Column(name = "expected_end_time")
    private LocalDateTime expectedEndTime;

    /** Total delay in minutes relative to the scheduled endTime. 0 = on time. */
    @Column(name = "delay_minutes")
    private Long delayMinutes = 0L;

    @Enumerated(EnumType.STRING)
    @Column(name = "status")
    private PointStatus status = PointStatus.PENDING;

    public enum PointType {
        PICKUP, DELIVERY, WAREHOUSE
    }

    public enum PointStatus {
        PENDING, IN_TRANSIT, COMPLETED, FAILED
    }

    @CreationTimestamp
    @Column(name = "created_at", nullable = true, updatable = false)
    private ZonedDateTime createdAt = ZonedDateTime.now(ZoneId.of("Asia/Kolkata"));

    @UpdateTimestamp
    @Column(name = "updated_at")
    private ZonedDateTime updatedAt = ZonedDateTime.now(ZoneId.of("Asia/Kolkata"));
}
/// hg bhhud hgyi njuj jnjk jnjnjnjk ghu hhuhu
// ftygyudjjk ughukfn hkuijil
// jji hjujunhn jijiji jiki jikiko jilikik jii nilki kkmjk